--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 							<svg width="14" height="15" viewBox="0 0 14 15" xmlns="http://www.w3.org/2000/svg"><path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#69707D" fill-rule="evenodd"/>
 							</svg>
 						</button>
-						<button type="button" data-info="prev-btn">
+						<button type="button" data-info="prev-btn" class="none">
 							<svg width="12" height="18" viewBox="0 0 12 18" xmlns="http://www.w3.org/2000/svg"><path d="M11 1 3 9l8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/></svg>
 						</button>
 						<button type="button" data-info="next-btn">
