code review dec.2022 almost done (v7)

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 				</a>
 			</div>
 			<nav>
-				<div>
-					<div></div>
-					<div></div>
-					<div></div>
-				</div>
+				<button id="burger" type="button">
+					<span></span>
+					<span></span>
+					<span></span>
+				</button>
 				<div>
 					<div>
 						<ul>
